--- a/react-todo-list/src/components/list/style.css
+++ b/react-todo-list/src/components/list/style.css
@@ -7,6 +7,7 @@
   background: white;
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
   min-height: 270px;
   padding: 20px;
   border-radius: 10px;
