--- a/react-todo-list/src/components/todo/style.css
+++ b/react-todo-list/src/components/todo/style.css
@@ -1,8 +1,11 @@
 .todo-card {
-  width: 270px;
+  width: 200px;
   border: 4px solid teal;
   border-radius: 12px;
   padding: 12px 24px 24px 24px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
 }
 
 .todo-content {
