--- a/react-todo-list/src/components/list/style.css
+++ b/react-todo-list/src/components/list/style.css
@@ -1,16 +1,17 @@
 .list-container {
   padding: 0 24px;
+  box-sizing: border-box;
 }
 
 .list-working,
 .list-done {
   background: white;
-  margin: 0 auto;
   display: flex;
-  flex: 4;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
   min-height: 270px;
-  padding: 20px;
+  padding: 20px 20px 10px 20px;
   border-radius: 10px;
   box-shadow: 1px 1px 3px 1px grey;
   font-size: 20px;
